--- a/ders/index.html
+++ b/ders/index.html
@@ -34,11 +34,11 @@
 <h3>Benzerlik</h3>
 <p>Benzeşen ayetlere örnekler</p>
 <ul>
-  <li><a href="../simi/2020.html" target=KK>Benzerlik 2020 (ilk)</a>
-  <li><a href="../simi/2021.html">Benzerlik 2021 (V4.2)</a>
-  <li><a href="../KK/korunmus.html" target=KK>Korunmuşluk 2022</a>
-  <li><a href="benzer.html">Benzerlik öbekleri</a>
-  <li><a href="../simi/2025.html" target=KK>Kıraat ve Benzerlik</a>
+  <li><a href="../simi/2020.html" target=KK>Benzerlik 2020 (V4.0)</a>
+  <li><a href="./sunum4.2.html">Benzerlik 2021 (V4.2)</a>
+  <li><a href="../KK/korunmus.html" target=KK>Korunmuş 2022 (V4.4)</a>
+  <li><a href="benzer.html">Benzerlik öbekleri 2024</a>
+  <li><a href="../simi/2025.html" target=KK>Kıraat farkları 2025</a>
 </ul>
 </div>
 <div class=narrow>
@@ -56,12 +56,12 @@
 <h3>Arapça Dersler</h3>
 <p>Kuran’dan alınmış örneklerle Arapça</p>
 <ol>
-  <li><a href="01.html">İsimler</a>
+  <li><a href="01.html">İsim ve tamlama</a>
   <li><a href="02.html">Cümle yapısı</a>
   <li><a href="03.html">Sıfat ve zamirler</a>
   <li><a href="04.html">Tekil, ikil, çoğul</a>
-  <li><a href="05.html">Sayılar</a>
-  <li><a href="06.html">Fiil çekimi</a>
+  <li><a href="05.html">Sayılar 1-100</a>
+  <li><a href="06.html">Fiil çekimleri</a>
   <li><a href="07.html">Kelime türetme</a>
 </ol>
 <p>Videolar: <a target=Kuran
