--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <li>2023 <a href="/Kitap/esma/Husna.html">Esmâ levhaları</a>
   <li>2024 <a href="/Kitap/rama/1445.html">Ramazan Meyveleri</a>
   <li>2024 <a href="/Kitap/ders/kadime.html">Mesâhif-i Kadîme</a>
+  <li>2025 <a href="/Kitap/simi/2025.html">Benzerlik ve Kıraat</a>
 </ul>
 <p>Videolar: <a target=Kuran
   href="https://maeyler.github.io/JS/api/YouTube#PLBDiqooDrruvsdTEmNMOLt0PJALyahUNX">
