--- a/simi/2025.html
+++ b/simi/2025.html
@@ -8,60 +8,68 @@
     <meta name="description" content="Quran: the protected book" />
     <link rel="icon" href="/Kitap/KK/Kay.png">
     <link rel="stylesheet" href="/Kitap/KK/korunmus.css" media="all">
-    <title>Benzeşen ayetler</title>
+    <title>Benzerlik ve Kıraat</title>
   </head>
   <body>
 
 <h3>Özet</h3>
-<p class=it>Yüce Kitabımız Kuran-ı Kerim'in önemli bir özelliği, benzer ayetlerin birbirini tefsir etmesi, açıklamasıdır. Benzeşen ayetler arasındaki farklar bazılarına göre tutarsızlık belirtisi sayılmış. Halbuki bu farklar kitabın korunmuş olduğunu açıkça gösteriyor. Çünkü <b>yalanda ve tahrifte  ittifak olmaz</b>. Bütün milletlerin ve cemaatlerin üstünde anlaştığı bir metin var, o halde vahiyle gelen mesaj bu olmalı.
+<p class=it>Yüce Kitabımız Kuran-ı Kerim'in önemli bir özelliği, benzer ayetlerin birbirini tefsir etmesi, açıklamasıdır. Benzeşen ayetler arasındaki farklar bazılarına göre tutarsızlık belirtisi sayılmış. Halbuki bu farklar kitabın korunmuş olduğunu açıkça gösteriyor. Çünkü <b>yalanda ve tahrifte  ittifak olmaz</b>. Bütün milletlerin ve cemaatlerin üstünde anlaştığı bir metin var, o halde vahiyle gelen mesaj bu olmalı.</p>
 <br><br>
-<h2>Kuran-ı Kerim'de Benzerlik</h2>
+<h2>Benzerlik ve Kıraat Farkları</h2>
 
 <div id=contents>
   <button id=buton onclick="menu1.hidden=!menu1.hidden">☰</button>
   <ul id=menu1 hidden>
-    <li><a href="#huzu"  >0. huzû biquvve</a>
-    <li><a href="#mehden">1. el-arda mehden</a>
-    <li><a href="#umur"  >2. erzelil-umur</a>
-    <li><a href="#ihlas" >3. kufuven ahad</a>
+    <li><a href="#huzu"   >0. huzû biquvve</a>
+    <li><a href="#mehden" >1. el-arda mehden</a>
+    <li><a href="#umur"   >2. erzelil-'umur</a>
+    <li><a href="#salihat">3. ya'melûnes-sâlihât</a>
+    <li><a href="#zevcuke">4. ente vezevcuke</a>
+    <li><a href="#nezgun" >5. yenzeganneke</a>
+    <li><a href="#ebvab"  >6. ebvâbe cehennem</a>
+    <li><a href="#gayb"   >7. enbâil-gayb</a>
+    <li><a href="#rabbiy" >8. rabbiy verabbukum</a>
+    <li><a href="#seyyiat">9. seyyiâtu mâ</a>
     <li><a href="#referans">Referanslar</a>
   </ul>
 </div>
 
-<p>Bir metnin muhafazasının, yani asırlarca korunmasının ne kadar zor olduğunu özellikle benzer ayet çiftlerinde okuyoruz. Aşağıda verilen örnekler, yalnızca konuyu açıklamak için, bunlar gibi çok sayıda benzerlik var.
+<p>Bir metnin muhafazasının, yani asırlarca korunmasının ne kadar zor olduğunu özellikle benzer ayet çiftlerinde okuyoruz. Aşağıda verilen örnekler, yalnızca konuyu açıklamak için, bunlar gibi çok sayıda benzerlik var.</p>
 <p>Benzerlik konusu, Kitabın aslındaki kelimelerle anlamlı olduğu için, bütün aramaları Arapça yapıyoruz. Iqra yazılımında seçtiğiniz bir meal ile takip edebilirsiniz.
 </p><br>
 
-<p id="huzu"><b>0. huzû biquvve</b> -- <i>sıkı tutun</i>
+<p id="huzu"><b>0. huzû biquvve</b> -- <i>sıkı tutun</i></p>
 <p>İlk örnek olarak arayacağımız ifade: 
   <a href="/Kuran/#b=lElkm%20ttqwn" target=iqraTop>le’allekum tettekûn</a>
-  6 ayette geçiyor, çoğu Bakara suresinde. Bulunan ayetlerin ikisinde benzerlik var: "Dağı üstünüze kaldırdık" farklı kelimelerle başlıyor, iki ayet aynı şekilde bitiyor (9 kelime ortak).
+  6 ayette geçiyor, çoğu Bakara suresinde. Bulunan ayetlerin sonuncusundaki "Dağı üstünüze kaldırdık" ifadesi başka bir ayette farklı kelimelerle başlıyor. Sonunda iki ayet aynı şekilde bitiyor:
 <figure>
   <img src="./0 huzu biquvve.png" alt="huzû biquvve" />
   <figcaption><a href="/Kuran/#b=bqwp%20wA*krwA" target=iqraTop>biquvvetin vezkurû</a>
-  </figcaption>
+  (9 kelime ortak)</figcaption>
 </figure>
-Verilen linkler sizi Iqra yazılımına götürür. Adres çubuğunu kaydırarak bu sayfaya geri gelebilirsiniz, Iqra açık kalsın.
+Verilen linkler sizi Iqra yazılımına götürür. Adres çubuğunu kaydırarak bu sayfaya geri gelebilirsiniz, Iqra açık kalsın. Nasıl yapıldığını şu videoda gösterdim:
+<iframe src="https://www.youtube.com/embed/-yQ-CEKOYzU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p><br>
 
-<p><b id="mehden">1. el-arda mehden</b> -- <i>yeryüzü beşik</i>
+<p><b id="mehden">1. el-arda mehden</b> -- <i>yeryüzü beşik</i></p>
 <p>
-<a href="/Kuran/#b=lElkm%20thtdwn" target=iqraTop>le’allekum tehtedûn</a> ifadesi de 6 ayette geçiyor. Son ayet 43:10'daki benzerliklerin ikisini (21:31 ve 78:6) Iqra bulmuş zaten, ayetin numarasına tıklayınca görünüyor. Diğeri biraz daha zor:
+<a href="/Kuran/#b=lElkm%20thtdwn" target=iqraTop>le’allekum tehtedûn</a> ifadesi de 6 ayette geçiyor. Orada son bulunan 43:10'a benzeyen ayeti <b>mehden</b> (beşik) kelimesiyle arayalım:
 <figure>
   <img src="./1 el-arda mehden.png" alt="el-arda mehden" />
-  <figcaption><a href="/Kuran/#b=AlArD%20mhdA" target=iqraTop>el-arda mehden</a>
-  </figcaption>
+  <figcaption><a href="/Kuran/#b=mhdA" target=iqraTop>mehden</a>
+  (8 kelime ortak)</figcaption>
 </figure>
-Yollar için bir yerde <b>seleke</b> (açtı) diğerinde <b>ca'ale</b> (yaptı) kullanılmış. Anlam neredeyse aynı, fakat kelime farklı olduğu için yazılım bu iki ayetin benzerliğini (henüz) göremiyor.
+Yollar için bir yerde <b>seleke</b> (açtı) diğerinde <b>ca'ale</b> (yaptı) kullanılmış. Anlam neredeyse aynı, fakat kelime farklı olduğu için yazılım bu iki ayetin benzerliğini göremiyor.<br>
+Kıraat farkı olmadığını görmek için, resmin altındaki Iqra linkine tıklayın. Her ayet için, Rehber'de tıklayarak Mushaf'ta açın; sonra ayet numarasına tıklayıp dış kaynaklarda corpuscoranicum linkine basın.
 </p><br>
 
-<p><b id="umur">2. erzelil-umur</b> -- <i>ömrün düşkünü</i>
+<p><b id="umur">2. erzelil-'umur</b> -- <i>ömrün düşkünü</i></p>
 <p><b>erzel</b> (en düşkün) kelimesi 4 ayette geçiyor
 Bunların ikisi <b>'umur</b> (ömür) ile tamlama yapıyor:
 <figure>
   <img src="./2 erzelil-umur.png" alt="erzelil-umur" />
-  <figcaption><a href="/Kuran/#b=Ar*l%20AlEmr" target=iqraTop>Ar*l%20AlEmr</a>
-  </figcaption>
+  <figcaption><a href="/Kuran/#b=Ar*l%20AlEmr" target=iqraTop>erzelil-'umur</a>
+  (9 kelime ortak)</figcaption>
 </figure>
 İki fark hemen dikkati çekiyor:<br>
 * <b>likeylâ</b> bir ayette bitişik, diğerinde ayrı <br>
@@ -69,30 +77,113 @@ Bunların ikisi <b>'umur</b> (ömür) ile tamlama yapıyor:
 Anlam tamamen aynı, ama bu farklar bütün mushaflarda korunmuş. Benzemeyen kısımları daha çok olduğu için Iqra yazılımı bu iki ayeti benzer saymıyor.
 </p><br>
 
-<p><b id="ihlas">3. kufuven ahad</b> -- <i>İhlas suresi</i>
+<p><b id="salihat">3. ya'melûnes-sâlihât</b> -- <i>salih işler yaparlar</i></p>
 <p>
+Sâlih amel işleyen müminlere, "büyük ve güzel bir ücret" müjdelenmiş. İki ayette geçen bu ifadenin biri haber veriyor, diğeri aynı kelimelerle dilek bildiriyor:
 <figure>
-  <img src="" alt="" />
-  <figcaption><a href="/Kuran/#b=" target=iqraTop></a>
-  </figcaption>
+  <img src="./3 salihat.png" alt="ya'melûnes-sâlihât" />
+  <figcaption><a href="/Kuran/#b=yEmlwn%20AlS" target=iqraTop>ya'melûnes-sâlihât</a>
+  (8 kelime ortak)</figcaption>
 </figure>
+Ayetlerin ilk yarıları çok farklı, bu nedenle benzer sayılmamışlar. İkinci yarılarında ise, son kelime dışında 8 kelime ortak: İsra suresinde kebîrâ, Kehf suresinde hasenâ sıfatlarıyla nitelenmiş. Demek ki ücret hem büyük hem de güzel... 
+
+Şimdi bu kelimelerdeki kıraat farkına bakalım : 
+kebîrâ yerine hasenâ diyen bir kıraat imamı var mı?
+
+17:9'da anlamı değiştirmeyen iki telaffuz farkı var ama herkes kebîrâ okumuş:
+18:2'de daha çok telaffuz farkları var ama herkes hasenâ okumuş:
 </p><br>
 
-<p><b id="">...</b> -- <i>Devam ediyor</i>
+<p><b id="zevcuke">4. ente vezevcuke</b> -- <i>sen ve eşin</i></p>
 <p>
+Hz Adem ve eşinin Cennet'te yerleşmesi Bakara ve A'raf 
+surelerinde aynı kelimelerle anlatılır:
 <figure>
-  <img src="" alt="" />
-  <figcaption><a href="/Kuran/#b=" target=iqraTop></a>
-  </figcaption>
+  <img src="./4 vezevcuke.png" alt="ente vezevcuke" />
+  <figcaption><a href="/Kuran/#b=wzwjk" target=iqraTop>vezevcuke</a>
+  (15 kelime ortak)</figcaption>
 </figure>
-</p>
+2:35'te birkaç telaffuz farkı dışında kıraat farkı yok:<br>
+şecere yerine şicere ya da şicre okuyan şâzz kıraatler var<br>
+7:19'da hiçbir kıraat farkı yok.
+</p><br>
 
+<p><b id="nezgun">5. veimmâ yenzeganneke</b> -- <i>(Şeytan) dürterse</i></p>
+<p>
+"Şeytan'dan bir dürtü gelirse" diye başlayan iki ayet var:
+<figure>
+  <img src="./5 yenzeganneke.png" alt="veimmâ yenzeganneke" />
+  <figcaption><a href="/Kuran/#b=ynzgnk" target=iqraTop>yenzeganneke</a>
+  (10 kelime ortak)</figcaption>
+</figure>
+Ayetler aynı şeyi söylüyor: "Allah'a sığın, O duyar ve bilir." İlkinde esmâ-i husnadan iki isim belirsiz kullanılmış. İkinci ayette aynı isimler belirli, ama hiçbir kıraat imamı bunları farklı okumamış.
+</p><br>
+
+<p><b id="ebvab">6. ebvâbe cehennem</b> -- <i>Cehennemin kapıları</i></p>
+<p>
+Üç ayette Cehennemin kapıları aynı kelimelerle konu olmuş:
+<figure>
+  <img src="./6 ebvabe cehennem.png" alt="ebvâbe cehennem" />
+  <figcaption><a href="/Kuran/#b=AbwAb%20jhnm" target=iqraTop>ebvabe cehennem</a>
+  (8 kelime ortak)</figcaption>
+</figure>
+Son ayetin 8 kelimesi hepsinde ortak. Bununla kıyaslayınca, ilk ayete fe- ve le- edatları eklenmiş, ortadaki ayette qiyle "dendi" kelimesi fazla: anlama çok etkisi olmayan farklar. 
 <br>
-<!-- <iframe src="https://www.youtube.com/embed/-yQ-CEKOYzU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+Yukarıdaki Iqra linkine gidin ve çıkan ayetlere tek tek tıklayın. Her biri için Iqra'da ayet numarasına tıklayın ve dış kaynaklardan corpuscoranicum seçin. 
+</p><br>
+
+<p><b id="gayb">7. enbâil-gayb</b> -- <i>gaybın haberleri</i></p>
+<p>
+Şu üç ayette esas olarak aynı şey söyleniyor: <br>
+Bu(nlar), sana vahyettiğimiz gayb haberlerindendir. <br>
+... onların yanında değildin (ki bunları bilesin.)
+<figure>
+  <img src="./7 enbail-gayb.png" alt="enbâil-gayb" />
+  <figcaption><a href="/Kuran/#b=AnbA'%20Algyb" target=iqraTop>enbâil-gayb</a>
+  (8 kelime ortak)</figcaption>
+</figure>
+Bulunan üç ayetin ikisinde 10 kelime ortak. Ortadaki ayette yine aynı kelimeler, ama üç tanesinde küçük farklar var:<br>
+* zâlike => tilke (çoğul, bir harf farklı)<br>
+* nûhîhi => nûhîhâ (muennes, elif fazla)<br>
+* vemâ => mâ (vav eksik)<br>
+En ufak bir kıraat farkı kaydedilmemiş, bütün raviler standart kıraate uygun okumuş. 
+</p><br>
+
+<p><b id="rabbiy">8. rabbiy verabbukum</b> -- <i>Rabbim ve Rabbiniz</i></p>
+<p>Hz İsa'nın dilinden, farklı zamanlarda söylenen üç söz:<br>
+Allah şüphesiz benim Rabbim, sizin de Rabbinizdir<br>
+öyleyse O'na kulluk edin, doğru yol budur
+<figure>
+  <img src="./8 innallahe rabbiy.png" alt="rabbiy verabbukum" />
+  <figcaption><a href="/Kuran/#b=rab~iY%20warab~ukumo" target=iqraTop>rabbiy verabbukum</a>
+  (8 kelime ortak)</figcaption>
+</figure>
+Biri beşikte, biri mucize gösterince, biri de "Son yemek"ten hemen önce...
+Yani Hz İsa'nın değişmeyen mesajı budur.<br>
+Kelimeler açısından neden ilginç? Çünkü üç ayet tamamen aynı hakikati iletiyor. Birinde bir harf diğerinde iki harf fazlalık anlamı etkilemiyor ama metin bu haliyle korunmuş: Meryem suresindeki ve ile Zuhruf suresindeki huve Kitab'ın ayrılmaz parçaları ve herkes bu şekilde okumuş, bu şekilde yazmış.
+</p><br>
+
+<p><b id="seyyiat">9. seyyiâtu mâ</b> -- <i>işledikleri kötülükler</i></p>
+<p>Yüce Kitabımızda defalarca tekrarlanan bir vaad: Hesap gününde herkes kendi yaptığını bulacak. Dünya hayatında birisine yardım ettiyse orada yardım görecek, zulmettiyse aynısı ona yapılacak. Bu elbette zulüm değil, özlediğimiz ve muhtaç olduğumuz adaletin ta kendisi!
+https://korunmuskitap.blogspot.com/2025/04/alay-ettikleri.html</p>
+<p>"Kötülükler" anlamındaki seyyiât kelimesi Kitabımızda 20 kere geçiyor, 4 tanesi özne halinde. Bu ayetlerin ilginç bir benzerliği var:
+<figure>
+  <img src="./9 seyyiat.png" alt="seyyiâtu mâ" />
+  <figcaption><a href="/Kuran/#b=say~i_#aAtu" target=iqraTop>seyyiâtu</a>
+  (8 kelime ortak)</figcaption>
+</figure>
+Kelimenin öncesinin ve sonrasının ikişer ihtimali var ve bütün ihtimaller dizilmiş.<br>
+<i>Bu konuyu açan E Öztemel'e ve benzerliği gösteren Nu Özbay'a teşekkürler...</i>
+</p><br>
+
+<h3 id="sonuc">Sonuç</h3>
+<p></p>
+<p></p>
+<br>
 <br>
 <h3 id="referans">Referanslar</h3>
-<p>Bu sayfa 1446 Ramazan ayında (Mart 2025)
-<a href="https://whatsapp.com/channel/0029Vb1sefy7T8bbxW8PWO1C">Benzeşen Ayetler</a> WhatsApp kanalında ve <a href="https://groups.google.com/g/okuyun5" target="Kuran">Iqra -- Okuyun</a> mail grubunda günlük olarak gelişmektedir. Verilen linklerden izleyebilirsiniz.
+<p>Bu sayfadaki örnekler 1446 Ramazan ayında (Mart 2025)
+<a href="https://groups.google.com/g/okuyun5" target="Kuran">Iqra -- Okuyun</a> mail grubunda günlük olarak yayınlanmıştı.
 </p>
 
 <script>window.name = 'KK'</script>
