--- a/ders/kadime.html
+++ b/ders/kadime.html
@@ -34,7 +34,7 @@
 <ul>
     <li><a href="kiraat.html">Geçerli kıraat farkları</a>
     <li><a href="korunmus.html#harf">Korunmuş unsurlar</a>
-    <li><a href="list.html">Kıraat farkları listesi</a>
+    <!-- <li><a href="list.html">Kıraat farkları listesi</a> -->
     <li><a href="harf.html">Harf farkları listesi</a>
     <li><a href="kelime.html#tablo1">Kelime farkları listesi</a>
     <li><a href="mesahif.html#tablo1">Kayıtlı imlâ farkları</a>
