--- a/simi/2025.html
+++ b/simi/2025.html
@@ -12,10 +12,9 @@
   </head>
   <body>
 
-<h3>Özet</h3>
-<p class=it>Yüce Kitabımız Kuran-ı Kerim'in önemli bir özelliği, benzer ayetlerin birbirini tefsir etmesi, açıklamasıdır. Benzeşen ayetler arasındaki farklar bazılarına göre tutarsızlık belirtisi sayılmış. Halbuki bu farklar kitabın korunmuş olduğunu açıkça gösteriyor. Çünkü <b>yalanda ve tahrifte  ittifak olmaz</b>. Bütün milletlerin ve cemaatlerin üstünde anlaştığı bir metin var, o halde vahiyle gelen mesaj bu olmalı.</p>
-<br><br>
-<h2>Benzerlik ve Kıraat Farkları</h2>
+<!-- <h3>Özet</h3>
+<p class=it></p>
+<br><br> -->
 
 <div id=contents>
   <button id=buton onclick="menu1.hidden=!menu1.hidden">☰</button>
@@ -34,14 +33,21 @@
   </ul>
 </div>
 
-<p>Bir metnin muhafazasının, yani asırlarca korunmasının ne kadar zor olduğunu özellikle benzer ayet çiftlerinde okuyoruz. Aşağıda verilen örnekler, yalnızca konuyu açıklamak için, bunlar gibi çok sayıda benzerlik var.</p>
-<p>Benzerlik konusu, Kitabın aslındaki kelimelerle anlamlı olduğu için, bütün aramaları Arapça yapıyoruz. Iqra yazılımında seçtiğiniz bir meal ile takip edebilirsiniz.
+<h2>Benzeşen ayetler ve Kıraat Farkları</h2>
+
+<p><b>Benzeşen ayetler nedir?</b></p>
+<p>Yüce Kitabımız Kuran-ı Kerim'in önemli bir özelliği, benzer ayetlerin birbirini tefsir etmesi, açıklamasıdır. Benzeşen ayetler arasındaki farklar bazılarına göre tutarsızlık belirtisi sayılmış. Halbuki bu farklar kitabın korunmuş olduğunu açıkça gösteriyor. Çünkü <b>yalanda ve tahrifte  ittifak olmaz</b>. Bütün milletlerin ve cemaatlerin üstünde anlaştığı bir metin var, o halde vahiyle gelen mesaj bu olmalı.
+</p><br>
+<p><b>Kıraat farkları nasıl açıklanıyor?</b></p>
+<p>İslam alimlerine göre, "bunlar münzeldir, vahiyle gelmiştir, Efendimiz (SAS) bazen onu bazen bunu okumuştur." Yani Kuran-ı Kerim tek boyutlu bir metin değil, bazı kelimeleri farklı okunabilen çoklu bir metindir, farklar tevâtür derecesinde kayıtlıdır.
+</p>
+<p>Oryantalistler ve bazı modern Müslümanlar ise, çoklu metin kavramını anlamadıkları için, bunları okuyuş hatası olarak göstermek istiyor. Bu görüş doğru olsaydı, öncelikle benzeşen ayetlerde bu tür "hatalar" gözlenirdi. Acaba hakikaten öyle mi?
 </p><br>
 
 <p id="huzu"><b>0. huzû biquvve</b> -- <i>sıkı tutun</i></p>
-<p>İlk örnek olarak arayacağımız ifade: 
+<p>Benzeşen ayetlere örnek olarak arayacağımız ifade: 
   <a href="/Kuran/#b=lElkm%20ttqwn" target=iqraTop>le’allekum tettekûn</a>
-  6 ayette geçiyor, çoğu Bakara suresinde. Bulunan ayetlerin sonuncusundaki "Dağı üstünüze kaldırdık" ifadesi başka bir ayette farklı kelimelerle başlıyor. Sonunda iki ayet aynı şekilde bitiyor:
+  6 ayette geçiyor, çoğu Bakara suresinde. Bulunan son ayetteki "Dağı üstünüze kaldırdık" ifadesi başka bir ayette farklı kelimelerle başlıyor. Sonunda iki ayet aynı şekilde bitiyor:
 <figure>
   <img src="./0 huzu biquvve.png" alt="huzû biquvve" />
   <figcaption><a href="/Kuran/#b=bqwp%20wA*krwA" target=iqraTop>biquvvetin vezkurû</a>
@@ -173,7 +179,7 @@ https://korunmuskitap.blogspot.com/2025/04/alay-ettikleri.html</p>
   (8 kelime ortak)</figcaption>
 </figure>
 Kelimenin öncesinin ve sonrasının ikişer ihtimali var ve bütün ihtimaller dizilmiş.<br>
-<i>Bu konuyu açan E Öztemel'e ve benzerliği gösteren Nu Özbay'a teşekkürler...</i>
+<!-- <i>Bu konuyu açan E Öztemel'e ve benzerliği gösteren N Özbay'a teşekkürler...</i> -->
 </p><br>
 
 <h3 id="sonuc">Sonuç</h3>
