--- a/simi/2025.html
+++ b/simi/2025.html
@@ -53,20 +53,27 @@
   <figcaption><a href="/Kuran/#b=bqwp%20wA*krwA" target=iqraTop>biquvvetin vezkurû</a>
   (9 kelime ortak)</figcaption>
 </figure>
-Verilen linkler sizi Iqra yazılımına götürür. Adres çubuğunu kaydırarak bu sayfaya geri gelebilirsiniz, Iqra açık kalsın. Nasıl yapıldığını şu videoda gösterdim:
-<iframe src="https://www.youtube.com/embed/-yQ-CEKOYzU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+Yukarıda verilen linkler sizi Iqra yazılımına götürür. Adres çubuğunu kaydırarak bu sayfaya geri gelebilirsiniz, Iqra sürekli açık kalsın. Yazılımın burada kullanılan bazı özelliklerini şu videoda anlattım:
+<iframe src="https://www.youtube.com/embed/kubXY1en58c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+Kıraat farklarını incelemek için link: 
+<a href="https://corpuscoranicum.org/en/verse-navigator/sura/7/verse/171/variants" target=Kuran>7:171</a><br>
+İmla farklarını incelemek için link: 
+<a href="https://elktb.net/A/7/171" target=Kuran>7:171</a>
 </p><br>
 
 <p><b id="mehden">1. el-arda mehden</b> -- <i>yeryüzü beşik</i></p>
 <p>
-<a href="/Kuran/#b=lElkm%20thtdwn" target=iqraTop>le’allekum tehtedûn</a> ifadesi de 6 ayette geçiyor. Orada son bulunan 43:10'a benzeyen ayeti <b>mehden</b> (beşik) kelimesiyle arayalım:
+<a href="/Kuran/#b=lElkm%20thtdwn" target=iqraTop>le’allekum tehtedûn</a> ifadesi de 6 ayette geçiyor. Listedeki son ayet 43:10'a benzeyen ayeti <b>mehden</b> (beşik) kelimesiyle arayalım:
 <figure>
   <img src="./1 el-arda mehden.png" alt="el-arda mehden" />
   <figcaption><a href="/Kuran/#b=mhdA" target=iqraTop>mehden</a>
   (8 kelime ortak)</figcaption>
 </figure>
 Yollar için bir yerde <b>seleke</b> (açtı) diğerinde <b>ca'ale</b> (yaptı) kullanılmış. Anlam neredeyse aynı, fakat kelime farklı olduğu için yazılım bu iki ayetin benzerliğini göremiyor.<br>
-Kıraat farkı olmadığını görmek için, resmin altındaki Iqra linkine tıklayın. Her ayet için, Rehber'de tıklayarak Mushaf'ta açın; sonra ayet numarasına tıklayıp dış kaynaklarda corpuscoranicum linkine basın.
+Kıraat farkı olmadığını görmek için, resmin altındaki Iqra linkine tıklayın. Her ayet için, Rehber'de tıklayarak Mushaf'ta açın; sonra ayet numarasına tıklayıp dış kaynaklarda corpuscoranicum linkine basın. Söz konusu linkler:
+<a href="https://corpuscoranicum.org/en/verse-navigator/sura/20/verse/53/variants" target=Kuran>20:53</a> ve
+<a href="https://corpuscoranicum.org/en/verse-navigator/sura/43/verse/10/variants" target=Kuran>43:10</a>.
+
 </p><br>
 
 <p><b id="umur">2. erzelil-'umur</b> -- <i>ömrün düşkünü</i></p>
