--- a/cuma/index.html
+++ b/cuma/index.html
@@ -62,6 +62,7 @@ href="https://www.youtube.com/playlist?list=PLBDiqooDrrutgeVuWmpz5619chQnpOGcA">
   <li><a href="hesap.html">Hesap Günü (Nureddin Yıldız)</a>
   <li><a href="hadis.html">Kuran'da hadis (Erkan Türe)</a>
   <li><a href="bereket.html">Bereket kaynağı (Havva Demir)</a>
+  <li><a href="hesapgunu.html">Hesap Günü (Burhanettin Can)</a>
 </ul>
 </div>
 
