--- a/simi/2025.html
+++ b/simi/2025.html
@@ -37,7 +37,7 @@
 <h2>Benzeşen ayetler ve Kıraat Farkları</h2>
 
 <p><b>Benzeşen ayetler nedir?</b></p>
-<p>Yüce Kitabımız Kuran-ı Kerim'in önemli bir özelliği, benzer ayetlerin birbirini tefsir etmesi, açıklamasıdır. Benzeşen ayetler arasındaki farklar bazılarına göre tutarsızlık belirtisi sayılmış. Halbuki bu farklar kitabın korunmuş olduğunu açıkça gösteriyor. Çünkü <b>yalanda ve tahrifte  ittifak olmaz</b>. Bütün milletlerin ve cemaatlerin üstünde anlaştığı bir metin var, o halde vahiyle gelen mesaj bu olmalı.
+<p>Yüce Kitabımız Kur'ân-ı Kerim'in önemli bir özelliği, benzer ayetlerin birbirini tefsir etmesi, açıklamasıdır. Benzeşen ayetler arasındaki farklar bazılarına göre tutarsızlık belirtisi sayılmış. Halbuki bu farklar Kitabın korunmuş olduğunu açıkça gösteriyor. Çünkü <b>yalanda ve tahrifte  ittifak olmaz</b>. Bütün milletlerin ve cemaatlerin üstünde anlaştığı bir metin var, o halde vahiyle gelen mesaj bu olmalı.
 </p><br>
 <p><b>Kıraat farkları nasıl açıklanıyor?</b></p>
 <p>İslam alimlerine göre, "bunlar münzeldir, vahiyle gelmiştir, Efendimiz (SAS) bazen onu bazen bunu okumuştur." Yani Kuran-ı Kerim tek boyutlu bir metin değil, bazı kelimeleri farklı okunabilen çoklu bir metindir, farklar tevâtür derecesinde kayıtlıdır.
@@ -178,7 +178,7 @@ En ufak bir kıraat farkı kaydedilmemiş, bütün raviler standart kıraate uyg
 </figure>
 Biri beşikte, biri mucize gösterince, biri de "Son yemek"ten hemen önce...
 Yani Hz İsa'nın değişmeyen mesajı budur.<br>
-Kelimeler açısından neden ilginç? Çünkü üç ayet tamamen aynı hakikati iletiyor. Birinde bir harf diğerinde iki harf fazlalık anlamı etkilemiyor ama metin bu haliyle korunmuş: Meryem suresindeki <b>ve</b> ile Zuhruf suresindeki <b>huve</b> Kitab'ın ayrılmaz parçaları ve herkes bu şekilde okumuş, bu şekilde yazmış.
+Kelimeler açısından neden ilginç? Çünkü üç ayet tamamen aynı hakikati iletiyor. Birinde bir harf diğerinde iki harf fazlalık anlamı etkilemiyor ama metin bu haliyle korunmuş: Meryem suresindeki <b>ve</b> ile Zuhruf suresindeki <b>huve</b> Kitabın ayrılmaz parçaları ve herkes bu şekilde okumuş, bu şekilde yazmış.
 </p><br>
 
 <p><b id="seyyiat">9. seyyiâtu mâ</b> -- <i>işledikleri kötülükler</i></p>
@@ -194,7 +194,7 @@ Kelimeler açısından neden ilginç? Çünkü üç ayet tamamen aynı hakikati 
 Kelimenin öncesinin ve sonrasının ikişer ihtimali var ve bütün ihtimaller dizilmiş. Hiçbirinde kıraat ihtilafı yok.<br>
 </p><br>
 
-<p><b id="istisna">10. ihsânen/husnen -- iyilik/güzellik</b></p>
+<p><b id="istisna">10. ihsânen/husnen</b> -- <i>iyilik/güzellik</i></p>
 <p> Aşağıda aranan <b>vevassaynâ</b> kelimesi üç ayette geçiyor, üçüncüde aradığımız istisna durumu görüyoruz: Bir kelimenin benzeri varyant kıraat olmuş.</p>
 <figure>
   <img src="./10. vevassayna.png" alt="vevassayna" />
@@ -209,10 +209,10 @@ gibi <b>husnen</b> (güzellik) okunabiliyor. Benzer ayetlerde kıraat farkı ola
 </p><br>
 
 <h3 id="sonuc">Sonuç</h3>
-<p>Benzeşen ayetler birbirini tefsir eder ve açıklar. Kıraat farkları ise Kitabımızın çoklu bir metin olduğunu gösterir. Çoğunlukla yerel telaffuz farkları olmakla birlikte, varyant okuyuşlardaki anlam farkları benzeşen ayetler gibidir. Her ikisinin de asrımıza kadar tevâtürle gelmiş olması, Kitabın korunmuş olduğunu açıkça gösterir.</p>
+<p>Benzeşen ayetler birbirini tefsir eder ve açıklar. Kıraat farkları ise Kitabımızın çoklu bir metin olduğunu gösterir. Çoğunluğu yerel telaffuz farkları olan varyant okuyuşlardaki anlam farkları da benzeşen ayetler gibidir. Her ikisinin asrımıza kadar tevâtürle gelmiş olması, Kitabın hakikaten korunmuş olduğunun delilidir.</p>
 <p>Kıraat farkları okuyuş hatası olsaydı, öncelikle benzeşen ayetlerde bu tür "hatalar" gözlenirdi. Yukarıdaki örnekler bu varsayımın yanlış olduğunu gösteriyor. Bir istisna dışında, benzeşen ayetlerde kıraat farkı rivayeti bulamadık. Demek ki farklı kıraatler okuyuş hatası değil, sağlam bir isnad zinciriyle bize kadar ulaşmış.</p>
 <br>
-<iframe src="https://www.youtube.com/embed/KoLQfjqPShY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/1Zx7XCm4OWA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 <br>
 <h3 id="referans">Referanslar</h3>
