meaning of besmele

--- a/esma/Rahman.html
+++ b/esma/Rahman.html
@@ -22,6 +22,8 @@
     Kalem Güzeli</a>
 
 </div></p>
+<p>Besmeleye şu anlamı verebiliriz: (2025'de eklendi)<br>
+<i>"Yârabbi, Senden daha güçlü, daha bilgili, daha hikmetli olmayı aklımdan geçirmediğim gibi, Senden daha merhametli olmayı da tahayyül edemem. Bu nedenle Senin rahmet yüklü iki adınla başlıyorum."</i></p>
 <p>İkisi de <b>rahmet</b> ile aynı kökten gelen er-Rahmân ve er-Rahîm, güzel isimlerin en başında sayılır. "Rahmân" ismiyle, Allah kulları arasında ayrım yapmaz, herkese yönelir. Adı aynı ismi taşıyan sure şöyle başlıyor:
 <img src="./image/Rahman.jpg" alt="er-Rahmân">
 <div class="caption">
