--- a/rama/bismillah.html
+++ b/rama/bismillah.html
@@ -21,12 +21,13 @@ src="https://1.bp.blogspot.com/-QYUKo6IAfFs/XqEg-Ym7MVI/AAAAAAAAbFs/1wKhUb14vc0t
   bismillâhirrahmânirrahîm
 </div>   
 <br>
-<b>bismillâh</b> (Allah'ın adı ile) Kuran'da üç yerde geçiyor.<br>
-<br>
-* üç kelimeden yapılmış: bi + ismi + allâhi<br>
-* son iki kelime öncekilerle kaynaşır<br>
-* "a" üzerindeki şapka uzatma işaretidir<br>
-* en sondaki "i" sesi okunmaz<br>
+<b>bismillâh</b> (Allah'ın adı ile) ifadesinin yapısı:<br>
+• üç kelimeden yapılmış: bi + ismi + allâhi<br>
+• son iki kelime öncekilerle kaynaşır<br>
+• "a" üzerindeki şapka uzatma işaretidir<br>
+• en sondaki "i" sesi okunmaz<br>
+<br><br>
+<b>bismillâh</b> Kuran'da üç yerde geçiyor:
 <br>
 <h3>1. Yüce Kitabımızın ilk satırı</h3>
 <span class=ayet>
@@ -56,8 +57,10 @@ Hem melik (kral), hem nebi. Aynı anda saltanat ve hikmet sahibi. <s>Yıldızlar
 <img src="https://1.bp.blogspot.com/-sMcMvTUGnhw/XqEg-VttkVI/AAAAAAAAbFw/MdK5bxklfx4Dgc5GtS2b4sW0jhnp9QtLgCEwYBhgL/s1600/besmele.0.jpg" />
 <div class="center small">
   innehû min suleymâne veinnehû bismillâhirrahmânirrahîm
-</div>   
-<br>
+</div><br>
+<h3>Besmelenin derin anlamı</h3>
+<i>"Yârabbi, Senden daha güçlü, daha bilgili, daha hikmetli olmayı aklımdan geçirmediğim gibi, Senden daha merhametli olmayı da tahayyül edemem. Bu nedenle Senin rahmet yüklü iki adınla başlıyorum."</i> (2025'de eklendi)
+<br><br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/T4tJwzo6zE0" 
