--- a/ders/isimler.html
+++ b/ders/isimler.html
@@ -18,7 +18,7 @@
 <p>Dersler <button class=goBack>◀</button>
 <br><br>
 </p>
-<p>Tabloyu hazırlarken corpus.quran.com verilerinde birkaç değişiklik yaptık: Corpus'da kökü belirtilen <b>'Âd, Ba'l, Kâ'be, Kâfûr, Kevser, Tesnîm</b> ile kökü belirtilmeyen <b>Zencebîl</b> özel isim sayıldı.</p>
+<p>Tabloyu hazırlarken corpus.quran.com verilerinde birkaç değişiklik yaptık: Corpus'da kökü belirtilen <b>'Âd, Ba'l, Kâ'be</b> ile Cennet pınarları özel isim sayıldı.</p>
 <script>
 "use strict";
 const DATA =
@@ -29,7 +29,6 @@ const DATA =
 Ba'l	baEol	37:125
 Bâbil	baAbil	2:102
 Bedr	bador	3:123
-Bekke	bak~ap	3:96
 Câlût	jaAluwt	2:249 2:250 2:251
 Cehennem	jahan~am	2:206 3:12 3:162 3:197 4:55 4:93 4:97 4:115 4:121 4:140 4:169 7:18 7:41 7:179 8:16 8:36 8:37 9:35 9:49 9:63 9:68 9:73 9:81 9:95 9:109 11:119 13:18 14:16 14:29 15:43 16:29 17:8 17:18 17:39 17:63 17:97 18:100 18:102 18:106 19:68 19:86 20:74 21:29 21:98 23:103 25:34 25:65 29:54 29:68 32:13 35:36 36:63 38:56 38:85 39:32 39:60 39:71 39:72 40:49 40:60 40:76 43:74 45:10 48:6 50:24 50:30 52:13 55:43 58:8 66:9 67:6 72:15 72:23 78:21 85:10 89:23 98:6
 Cibrîl	jiboriyl	2:97 2:98 66:4
@@ -42,17 +41,16 @@ Hârût	ha%60ruwt&r=ma%60ruwt	Mârût 2:102
 Huneyn	Hunayon	9:25
 İblîs	<iboliys	2:34 7:11 15:31 15:32 17:61 18:50 20:116 26:95 34:20 38:74 38:75
 'İmrân	Eimora%60n	3:33 3:35 66:12
-İncîl	<injiyl	3:3 3:48 3:65 5:46 5:47 5:66 5:68 5:110 7:157 9:111 48:29 57:27
 İrem	<iram	89:7
 Kâ'be	kaEobap	5:95 5:97
-Kâfûr	kaAfuwr&r=kawovar&r=tasoniym	76:5 Kevser 108:1 Tesnîm 83:27
 Kârûn	qa%60ruwn	28:76 28:79 29:39 40:24
 Kureyş	qurayo$	106:1
 Lât	la%60t&r=Euz~aY%60&r=manaw%60p	'Uzzâ 53:19 Menât 53:20
 Lazâ	laZaY%60	70:15
 Lukmân	luqoma%60n	31:12 31:13
+Medine	mdn&r=yavorib	9:101 9:120 33:60 63:8 Yesrib 33:13
 Medyen	madoyan	7:85 9:70 11:84 11:95 20:40 22:44 28:22 28:23 28:45 29:36
-Mekke	mak~ap	48:24
+Mekke	mak~ap&r=bak~ap	48:24 Bekke 3:96
 Meryem	maroyam	2:87 2:253 3:36 3:37 3:42 3:43 3:44 3:45 4:156 4:157 4:171 5:17 5:46 5:72 5:75 5:78 5:110 5:112 5:114 5:116 9:31 19:16 19:27 19:34 23:50 33:7 43:57 57:27 61:6 61:14 66:12
 Mesîh	masiyH	3:45 4:157 4:171 4:172 5:17 5:72 5:75 9:30 9:31
 Mîkâl	miykaY%60l	2:98
@@ -60,23 +58,26 @@ Ramadân	ramaDaAn	2:185
 Rûm	r~uwm	30:2
 Safâ	S~afaA&r=marowap	Merve 2:158
 Sakar	saqar	54:48 74:26 74:27 74:42
+Sâmiriy	smr	20:85 20:87 20:95
 Sebe	saba<	27:22 34:15
 Semûd	vamuwd	7:73 9:70 11:61 11:68 11:95 14:9 17:59 22:42 25:38 26:141 27:45 29:38 38:13 40:31 41:13 41:17 50:12 51:43 53:51 54:23 69:4 69:5 85:18 89:9 91:11
 Seynâ	sayonaA^'&r=siyniyn	23:20 Sînîn 95:2
 Tâlût	TaAluwt	2:247 2:249
-Tevrât	t~aworaY%60p	3:3 3:48 3:50 3:65 3:93 5:43 5:44 5:46 5:66 5:68 5:110 7:157 9:111 48:29 61:6 62:5
 Tubba'	tub~aE	44:37 50:14
 'Uzeyr	Euzayor	9:30
 Vedd	wdd&r=yaguwv&r=nsr	Suvâ' Yegûs Ye'ûk Nesr 71:23
 Yehûdiy	yahuwdiy~	2:113 2:120 3:67 5:18 5:51 5:64 5:82 9:30
 Yecûc	ya>ojuwj&r=ma>ojuwj	Mecûc 18:94 21:96
-Yesrib	yavorib	33:13
-Zencebîl	salosabiyl&r=zanjabiyl	76:17 Selsebîl 76:18
 Zeyd	zayod	33:37
-Kökü olan özel isimler
-Kur'ân	qrA	2:185 4:82 5:101 6:19 7:204 9:111 10:15 10:37 10:61 12:2 12:3 13:31 15:1 15:87 15:91 16:98 17:9 17:41 17:45 17:46 17:60 17:78 17:82 17:88 17:89 17:106 18:54 20:2 20:113 20:114 25:30 25:32 27:1 27:6 27:76 27:92 28:85 30:58 34:31 36:2 36:69 38:1 39:27 39:28 41:3 41:26 41:44 42:7 43:3 43:31 46:29 47:24 50:1 50:45 54:17 54:22 54:32 54:40 55:2 56:77 59:21 72:1 73:4 73:20 75:17 75:18 76:23 84:21 85:21
+<small>Zul-karneyn</small>	qrn	18:83 18:86 18:94
+Kitaplar
+Tevrât	t~aworaY%60p	3:3 3:48 3:50 3:65 3:93 5:43 5:44 5:46 5:66 5:68 5:110 7:157 9:111 48:29 61:6 62:5
 Zebûr	zbr	4:163 17:55 21:105
-Sâmiriy	smr	20:85 20:87 20:95`
+İncîl	<injiyl	3:3 3:48 3:65 5:46 5:47 5:66 5:68 5:110 7:157 9:111 48:29 57:27
+Kur'ân	qrA	2:185 4:82 5:101 6:19 7:204 9:111 10:15 10:37 10:61 12:2 12:3 13:31 15:1 15:87 15:91 16:98 17:9 17:41 17:45 17:46 17:60 17:78 17:82 17:88 17:89 17:106 18:54 20:2 20:113 20:114 25:30 25:32 27:1 27:6 27:76 27:92 28:85 30:58 34:31 36:2 36:69 38:1 39:27 39:28 41:3 41:26 41:44 42:7 43:3 43:31 46:29 47:24 50:1 50:45 54:17 54:22 54:32 54:40 55:2 56:77 59:21 72:1 73:4 73:20 75:17 75:18 76:23 84:21 85:21
+Cennet pınarları
+Kâfûr	kaAfuwr&r=kawovar&r=tasoniym	76:5 Kevser 108:1 Tesnîm 83:27
+Zencebîl	salosabiyl&r=zanjabiyl	76:17 Selsebîl 76:18`
 
 function line(str) {
   let verse = x => x.includes(':')? 
