--- a/simi/2025.html
+++ b/simi/2025.html
@@ -218,6 +218,7 @@ gibi <b>husnen</b> (güzellik) okunabiliyor. Benzer ayetlerde kıraat farkı ola
 <h3 id="referans">Referanslar</h3>
 <p>Bu sayfadaki örnekler 1446 Ramazan ayında (Mart 2025)
 <a href="https://groups.google.com/g/okuyun5/search?q=before%3A2025-04-1" target=Kuran>Iqra -- Okuyun</a> mail grubunda günlük olarak yayınlanmıştı.
+Daha çok sayıda örnek için: <a href="./tablo.html">tablo</a>
 </p>
 
 <script>window.name = 'KK'</script>
