--- a/simi/2025.html
+++ b/simi/2025.html
@@ -83,7 +83,7 @@ Kıraat farkı olmadığını görmek için, resmin altındaki Iqra linkine tık
 Bunların ikisi <b>'umur</b> (ömür) ile tamlama yapıyor:
 <figure>
   <img src="img/2 erzelil-umur.png" alt="erzelil-umur" />
-  <figcaption><a href="/Kuran/#b=Ar*l%20AlEmr" target=iqraTop>erzelil-'umur</a>
+  <figcaption><a href="/Kuran/#b=loEumuri" target=iqraTop>erzelil-'umur</a>
   (9 kelime ortak)</figcaption>
 </figure>
 İki fark hemen dikkati çekiyor:<br>
