--- a/simi/tablo.html
+++ b/simi/tablo.html
@@ -28,62 +28,62 @@
 <p><b>Benzeşen ayetler nedir?</b></p>
 <p>Yüce Kitabımız Kur'ân-ı Kerim'in önemli bir özelliği, benzer ayetlerin birbirini tefsir etmesi, açıklamasıdır. Benzeşen ayetler arasındaki ufak farklar tutarsızlık belirtisi değil, aksine, Kitabın korunmuş olduğunun bir göstergesi. Aşağıdaki örnekler bu iddiayı destekliyor.
 </p>
+<p>Hiç fark olmadan aynen tekrarlanan ayetlere yer vermedik. Aşağıdaki örneklerin hepsinde, bir ifade az sayıda (2-4 kere) tekrar edilmiş ve ayetler arasında ufak farklar var.</p>
 
 <div id="samples">
 <p>1. <a href="/Kuran/#b=mhdA" target=iqraTop>el-arda mehden</a>
--- <i>yeryüzü beşik</i> 20:53 43:10
+-- <i>yeryüzü beşik</i>&ensp; 20:53 43:10
   <img src="img/1 el-arda mehden.png" alt="el-arda mehden" />
 </p>
 
-<p>2. <a href="/Kuran/#b=Ar*l%20AlEmr" target=iqraTop>erzelil-'umur</a>
--- <i>ömrün düşkünü</i> 16:70 22:5
+<p>2. <a href="/Kuran/#b=loEumuri" target=iqraTop>erzelil-'umur</a>
+-- <i>ömrün düşkünü</i>&ensp; 16:70 22:5
   <img src="img/2 erzelil-umur.png" alt="erzelil-umur" />
 </p>
 
 <p>3. <a href="/Kuran/#b=yEmlwn%20AlS" target=iqraTop>ya'melûnes-sâlihât</a>
--- <i>salih işler yaparlar</i> 17:9 18:2
+-- <i>salih işler yaparlar</i>&ensp; 17:9 18:2
   <img src="img/3 salihat.png" alt="ya'melûnes-sâlihât" />
 </p>
 
-<p>4. <a href="/Kuran/#b=wzwjk" target=iqraTop>vezevcuke</a>
--- <i>sen ve eşin</i> 2:35 7:19
+<p>4. <a href="/Kuran/#b=wzwjk" target=iqraTop>ente vezevcuke</a>
+-- <i>sen ve eşin</i>&ensp; 2:35 7:19
   <img src="img/4 vezevcuke.png" alt="ente vezevcuke" />
 </p>
 
-<p>5. <a href="/Kuran/#b=ynzgnk" target=iqraTop>yenzeganneke</a>
--- <i>(Şeytan) dürterse</i> 7:200 41:36
+<p>5. <a href="/Kuran/#b=ynzgnk" target=iqraTop>veimmâ yenzeganneke</a>
+-- <i>(Şeytan) dürterse</i>&ensp; 7:200 41:36
   <img src="img/5 yenzeganneke.png" alt="veimmâ yenzeganneke" />
 </p>
 
-<p>6. <a href="/Kuran/#b=AbwAb%20jhnm" target=iqraTop>ebvabe cehennem</a>
--- <i>Cehennemin kapıları</i> 16:29 39:72 40:76
+<p>6. <a href="/Kuran/#b=AbwAb%20jhnm" target=iqraTop>ebvâbe cehennem</a>
+-- <i>Cehennemin kapıları</i>&ensp; 16:29 39:72 40:76
   <img src="img/6 ebvabe cehennem.png" alt="ebvâbe cehennem" />
 </p>
 
 <p>7. <a href="/Kuran/#b=AnbA'%20Algyb" target=iqraTop>enbâil-gayb</a>
--- <i>gaybın haberleri</i> 3:44 11:49 12:102
+-- <i>gaybın haberleri</i>&ensp; 3:44 11:49 12:102
   <img src="img/7 enbail-gayb.png" alt="enbâil-gayb" />
 </p>
 
 <p>8. <a href="/Kuran/#b=rab~iY%20warab~ukumo" target=iqraTop>rabbiy verabbukum</a>
--- <i>Rabbim ve Rabbiniz</i> 3:51 19:36 43:64
+-- <i>Rabbim ve Rabbiniz</i>&ensp; 3:51 19:36 43:64
   <img src="img/8 innallahe rabbiy.png" alt="rabbiy verabbukum" />
 </p>
 
-<p>9. <a href="/Kuran/#b=say~i_#aAtu" target=iqraTop>seyyiâtu</a>
--- <i>işledikleri kötülükler</i> 16:34 39:48 39:51 45:33
+<p>9. <a href="/Kuran/#b=say~i_#aAtu" target=iqraTop>seyyiâtu mâ</a>
+-- <i>işledikleri kötülükler</i>&ensp; 16:34 39:48 39:51 45:33
   <img src="img/9 seyyiat.png" alt="seyyiâtu mâ" />
 </p>
 
 <p>10. <a href="/Kuran/#b=wwSynA" target=iqraTop>vevassaynâ</a>
--- <i>iyilik/güzellik</i> 46:15 29:8
+-- <i>tavsiye etmiştik</i>&ensp; 29:8 31:14 46:15
   <img src="img/10. vevassayna.png" alt="vevassayna" />
 </p>
 </div>
 
 <h3 id="sonuc">Sonuç</h3>
 <p>Kıraat farkları okuyuş hatası olsaydı, öncelikle benzeşen ayetlerde bu tür "hatalar" gözlenirdi. Yukarıdaki örnekler bu varsayımın yanlış olduğunu gösteriyor. Bir istisna dışında, benzeşen ayetlerde kıraat farkı rivayeti bulamadık. Demek ki farklı kıraatler okuyuş hatası değil, sağlam bir isnad zinciriyle bize kadar ulaşmış.</p>
-<p>...</p>
 <!-- <br>
 <iframe src="https://www.youtube.com/embed/1Zx7XCm4OWA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br> -->
@@ -92,7 +92,7 @@
 <p>Bu sayfadaki örnekler 1446 Ramazan ayında (Mart 2025)
 <a href="https://groups.google.com/g/okuyun5/search?q=before%3A2025-04-1" target=Kuran>Iqra -- Okuyun</a> mail grubunda günlük olarak yayınlanmıştı. 
 İlk 10 örnek <a href="./2025.html">şu sayfada</a> daha ayrıntılı anlatılıyor.
-</p>
+</p><br>
 
 <script>
 function register(x) {
