--- a/simi/tablo.html
+++ b/simi/tablo.html
@@ -31,55 +31,6 @@
 <p>Hiç fark olmadan aynen tekrarlanan ayetlere yer vermedik. Aşağıdaki örneklerin hepsinde, bir ifade az sayıda (2-4 kere) tekrar edilmiş ve ayetler arasında ufak farklar var.</p>
 
 <div id="samples">
-<p>1. <a href="/Kuran/#b=mhdA" target=iqraTop>el-arda mehden</a>
--- <i>yeryüzü beşik</i>&ensp; 20:53 43:10
-  <img src="img/1 el-arda mehden.png" alt="el-arda mehden" />
-</p>
-
-<p>2. <a href="/Kuran/#b=loEumuri" target=iqraTop>erzelil-'umur</a>
--- <i>ömrün düşkünü</i>&ensp; 16:70 22:5
-  <img src="img/2 erzelil-umur.png" alt="erzelil-umur" />
-</p>
-
-<p>3. <a href="/Kuran/#b=yEmlwn%20AlS" target=iqraTop>ya'melûnes-sâlihât</a>
--- <i>salih işler yaparlar</i>&ensp; 17:9 18:2
-  <img src="img/3 salihat.png" alt="ya'melûnes-sâlihât" />
-</p>
-
-<p>4. <a href="/Kuran/#b=wzwjk" target=iqraTop>ente vezevcuke</a>
--- <i>sen ve eşin</i>&ensp; 2:35 7:19
-  <img src="img/4 vezevcuke.png" alt="ente vezevcuke" />
-</p>
-
-<p>5. <a href="/Kuran/#b=ynzgnk" target=iqraTop>veimmâ yenzeganneke</a>
--- <i>(Şeytan) dürterse</i>&ensp; 7:200 41:36
-  <img src="img/5 yenzeganneke.png" alt="veimmâ yenzeganneke" />
-</p>
-
-<p>6. <a href="/Kuran/#b=AbwAb%20jhnm" target=iqraTop>ebvâbe cehennem</a>
--- <i>Cehennemin kapıları</i>&ensp; 16:29 39:72 40:76
-  <img src="img/6 ebvabe cehennem.png" alt="ebvâbe cehennem" />
-</p>
-
-<p>7. <a href="/Kuran/#b=AnbA'%20Algyb" target=iqraTop>enbâil-gayb</a>
--- <i>gaybın haberleri</i>&ensp; 3:44 11:49 12:102
-  <img src="img/7 enbail-gayb.png" alt="enbâil-gayb" />
-</p>
-
-<p>8. <a href="/Kuran/#b=rab~iY%20warab~ukumo" target=iqraTop>rabbiy verabbukum</a>
--- <i>Rabbim ve Rabbiniz</i>&ensp; 3:51 19:36 43:64
-  <img src="img/8 innallahe rabbiy.png" alt="rabbiy verabbukum" />
-</p>
-
-<p>9. <a href="/Kuran/#b=say~i_#aAtu" target=iqraTop>seyyiâtu mâ</a>
--- <i>işledikleri kötülükler</i>&ensp; 16:34 39:48 39:51 45:33
-  <img src="img/9 seyyiat.png" alt="seyyiâtu mâ" />
-</p>
-
-<p>10. <a href="/Kuran/#b=wwSynA" target=iqraTop>vevassaynâ</a>
--- <i>tavsiye etmiştik</i>&ensp; 29:8 31:14 46:15
-  <img src="img/10. vevassayna.png" alt="vevassayna" />
-</p>
 </div>
 
 <h3 id="sonuc">Sonuç</h3>
@@ -94,19 +45,67 @@
 İlk 10 örnek <a href="./2025.html">şu sayfada</a> daha ayrıntılı anlatılıyor.
 </p><br>
 
+<script src="/Kuran/code/model.js"></script>
 <script>
+"use strict";
+const DATA =
+`el-arda mehden	yeryüzü beşik	20:53 43:10	b=mhdA	1 el-arda mehden.png
+erzelil-'umur	ömrün düşkünü	16:70 22:5	b=loEumuri	2 erzelil-umur.png
+ya'melûnes-sâlihât	salih işler yaparlar	17:9 18:2	b=yEmlwn%20AlS	3 salihat.png
+ente vezevcuke	sen ve eşin	2:35 7:19	b=wzwjk	4 vezevcuke.png
+veimmâ yenzeganneke	(Şeytan) dürterse	7:200 41:36	b=ynzgnk	5 yenzeganneke.png
+ebvâbe cehennem	Cehennemin kapıları	16:29 39:72 40:76	b=AbwAb%20jhnm	6 ebvabe cehennem.png
+enbâil-gayb	gaybın haberleri	3:44 11:49 12:102	b=AnbA'%20Algyb	7 enbail-gayb.png
+rabbiy verabbukum	Rabbim ve Rabbiniz	3:51 19:36 43:64	b=rab~iY%20warab~ukumo	8 innallahe rabbiy.png
+seyyiâtu mâ	işledikleri kötülükler	16:34 39:48 39:51 45:33	b=say~i_#aAtu	9 seyyiat.png
+vevassaynâ	tavsiye etmiştik	29:8 31:14 46:15	b=wwSynA	10. vevassayna.png
+`
+const NAMES = new Map(), CHAPS = []
+function line(str) {
+	function verse(cv) {
+	  let [c, v] = cv.split(':')
+	  let L = CHAPS[c]
+	  if (!L) CHAPS[c] = [item]
+	  else if (!L.includes(item))
+	  L.push(item)
+	}
+	let [id, turk, refs, link, pict] = str.split('\t')
+	if (!id) return
+	let item = {id, refs, turk, link, pict}
+	NAMES.set(id, item)
+	refs.split(' ').forEach(verse)
+	return
+}
+function makeSamples() {
+	function verse(x) {
+		let [c] = x.id.split(':')
+		VERSES.push(`<p><a href="/Kuran/#${x.link}" target=iqraTop>${x.id}</a> 
+	-- <i>${x.turk}</i>&ensp; ${x.refs}<img alt="${x.id}" /></p>`)
+	}
+	DATA.split('\n').forEach(line)
+	let VERSES = []
+	for (let c in CHAPS) {
+		// console.log(c, CHAPS[c]);
+		VERSES.push("Sure "+c+". <b>"+suraNames.tr[c]+"</b>")
+		CHAPS[c].forEach(verse)
+	}
+	samples.innerHTML = VERSES.join('\n')
+}
 function register(x) {
 	function hideOrShow() {
 		let i = x.querySelector("img")
 		if (!i) return
+		if (!i.src) 
+		  i.src = "img/"+NAMES.get(i.alt).pict
 		let d = i.style.display
 		i.style.display = d? "" : "block"
 	}
 	x.onmouseenter = hideOrShow
 	x.onmouseleave = hideOrShow
 }
-samples.querySelectorAll("p").forEach(register)
 window.name = 'KK'
+makeSamples()
+samples.querySelectorAll("p").forEach(register)
 </script>
   </body>
 </html>
