--- a/simi/2025.html
+++ b/simi/2025.html
@@ -50,7 +50,7 @@
   <a href="/Kuran/#b=lElkm%20ttqwn" target=iqraTop>le’allekum tettekûn</a>
   6 ayette geçiyor, çoğu Bakara suresinde. Bulunan son ayetteki "Dağı üstünüze kaldırdık" ifadesi başka bir ayette farklı kelimelerle başlıyor. Sonunda iki ayet aynı şekilde bitiyor:
 <figure>
-  <img src="img/0 huzu biquvve.png" alt="huzû biquvve" />
+  <img src="huzu biquvve.png" alt="huzû biquvve" />
   <figcaption><a href="/Kuran/#b=bqwp%20wA*krwA" target=iqraTop>biquvvetin vezkurû</a>
   (9 kelime ortak)</figcaption>
 </figure>
@@ -197,7 +197,7 @@ Kelimenin öncesinin ve sonrasının ikişer ihtimali var ve bütün ihtimaller 
 <p><b id="istisna">10. ihsânen/husnen</b> -- <i>iyilik/güzellik</i></p>
 <p> Aşağıda aranan <b>vevassaynâ</b> kelimesi üç ayette geçiyor, üçüncüde aradığımız istisna durumu görüyoruz: Bir kelimenin benzeri varyant kıraat olmuş.</p>
 <figure>
-  <img src="img/10. vevassayna.png" alt="vevassayna" />
+  <img src="img/vevassayna.png" alt="vevassayna" />
   <figcaption><a href="/Kuran/#b=wwSynA" target=iqraTop>vevassaynâ</a>
   (4 kelime ortak)</figcaption>
 </figure>
