--- a/simi/tablo2.html
+++ b/simi/tablo2.html
@@ -11,12 +11,12 @@
     <title>Benzerlik örnekleri</title>
   </head>
   <style>
-	details {
-		margin-block: 1em;
-		margin-left: 1em;
+	img { 
+		max-width: 420px;
+		display: none;
 	}
-	img { max-width: 420px; }
 	a:hover { font-weight: normal; }
+
 @media screen and (max-width: 500px) {
 	img { max-width: 100%; }
 }
@@ -28,7 +28,7 @@
 <p><b>Benzeşen ayetler nedir?</b></p>
 <p>Yüce Kitabımız Kur'ân-ı Kerim'in önemli bir özelliği, benzer ayetlerin birbirini tefsir etmesi, açıklamasıdır. Benzeşen ayetler arasındaki ufak farklar tutarsızlık belirtisi değil, aksine, Kitabın korunmuş olduğunun bir göstergesi. Aşağıdaki örnekler bu iddiayı destekliyor.
 </p>
-<p>Hiç fark olmadan aynen tekrarlanan ayetlere yer vermedik. Aşağıdaki örneklerin hepsinde, bir ifade az sayıda (2-4 kere) tekrar edilmiş ve ayetler arasında ufak farklar var. Benzeşen ayetleri görmek için her örneğin yanındaki üçgene dokunun. Açılan resmin üstünde Iqra linkini bulacaksınız. Bu linke dokununca ayrı bir sekmede Rehber yazılımı açılır. Tekrar bu sekmeye dönüp örnekleri incelemeye devam edebilirsiniz.</p>
+<p>Hiç fark olmadan aynen tekrarlanan ayetlere yer vermedik. Aşağıdaki örneklerin hepsinde, bir ifade az sayıda (2-4 kere) tekrar edilmiş ve ayetler arasında ufak farklar var.</p>
 
 <div id="samples">
 </div>
@@ -45,7 +45,6 @@
 İlk 10 örnek <a href="./2025.html">şu sayfada</a> daha ayrıntılı anlatılıyor.
 </p><br>
 
-<script src="/Kuran/code/model.js"></script>
 <script>
 "use strict";
 const DATA =
@@ -70,46 +69,31 @@ muhlikel-qurâ	beldelerin helâki	6:131 11:117 28:59	b=hlk%20AlqrY	muhlikel-qura
 veyuzekkiy	arındırır	2:129 2:151 3:164 62:2	b=wyzky	veyuzekkiy.png
 ma leke minallahi	Allah'tan sana ... yok	2:120 13:37	b=mA%20lk%20mn	ma leke minallahi.png
 `
-const NAMES = new Map(), CHAPS = []
+const NAMES = new Map()
 function line(str) {
-	function verse(cv) {
-	  let [c, v] = cv.split(':')
-	  let L = CHAPS[c]
-	  if (!L) CHAPS[c] = [item]
-	  else if (!L.includes(item))
-	  L.push(item)
-	}
-	let [id, turk, refs, link, pict] = str.split('\t')
-	if (!id) return
-	let item = {id, turk, refs, link, pict}
-	NAMES.set(id, item)
-	refs.split(' ').forEach(verse)
-	return
+  let [id, turk, refs, link, pict] = str.split('\t')
+  if (!id) return ""
+  NAMES.set(id, {refs, link, pict})
+  return `<p><a href="/Kuran/#${link}" target=iqraTop>${id}</a> 
+	-- <i>${turk}</i>&ensp; ${refs}<img alt="${id}" /></p>`
 }
-function makeSamples() {
-	function verse(x) {
-		let [c] = x.id.split(':')
-VERSES.push(`<details>
-  <summary><i>${x.turk}</i>&ensp; ${x.refs}</summary>
-	<div id="${x.turk}">
-	<a href="/Kuran/#${x.link}" target=iqraTop>${x.id}</a>
-	</div>
-  <img src="img/${x.pict}" alt="${x.id}" />
-</details>`)
+
+samples.innerHTML =
+    DATA.split('\n').map(line).join('\n')
+function register(x) {
+	function hideOrShow() {
+		let i = x.querySelector("img")
+		if (!i) return
+		if (!i.src) 
+		  i.src = "img/"+NAMES.get(i.alt).pict
+		let d = i.style.display
+		i.style.display = d? "" : "block"
 	}
-	DATA.split('\n').forEach(line)
-	let VERSES = []
-	for (let c in CHAPS) {
-		// console.log(c, CHAPS[c]);
-		VERSES.push("<p>Sure "+c
-			+". <b>"+suraNames.tr[c]+"</b></p>")
-		CHAPS[c].forEach(verse)
-	}
-	samples.innerHTML = VERSES.join('\n')
+	x.onmouseenter = hideOrShow
+	x.onmouseleave = hideOrShow
 }
+samples.querySelectorAll("p").forEach(register)
 window.name = 'KK'
-makeSamples()
-//samples.querySelectorAll("p").forEach(register)
 </script>
   </body>
 </html>
