--- a/simi/tablo2.html
+++ b/simi/tablo2.html
@@ -45,30 +45,9 @@
 İlk 10 örnek <a href="./2025.html">şu sayfada</a> daha ayrıntılı anlatılıyor.
 </p><br>
 
+<script src="tablo.js"></script>
 <script>
 "use strict";
-const DATA =
-`el-arda mehden	yeryüzü beşik	20:53 43:10	b=mhdA	1 el-arda mehden.png
-erzelil-'umur	ömrün düşkünü	16:70 22:5	b=loEumuri	2 erzelil-umur.png
-ya'melûnes-sâlihât	salih işler yaparlar	17:9 18:2	b=yEmlwn%20AlS	3 salihat.png
-ente vezevcuke	sen ve eşin	2:35 7:19	b=wzwjk	4 vezevcuke.png
-veimmâ yenzeganneke	(Şeytan) dürterse	7:200 41:36	b=ynzgnk	5 yenzeganneke.png
-ebvâbe cehennem	Cehennemin kapıları	16:29 39:72 40:76	b=AbwAb%20jhnm	6 ebvabe cehennem.png
-enbâil-gayb	gaybın haberleri	3:44 11:49 12:102	b=AnbA'%20Algyb	7 enbail-gayb.png
-rabbiy verabbukum	Rabbim ve Rabbiniz	3:51 19:36 43:64	b=rab~iY%20warab~ukumo	8 innallahe rabbiy.png
-seyyiâtu mâ	işledikleri kötülükler	16:34 39:48 39:51 45:33	b=say~i_#aAtu	9 seyyiat.png
-vevassaynâ	tavsiye etmiştik	29:8 31:14 46:15	b=wwSynA	vevassayna.png
-belaga eşuddehû	yetişkinliğe ulaşınca	12:22 28:14	b=wlmA%20blg	belaga esuddehu.png
-ey-yenfa'anâ	bize faydalı olabilir	12:21 28:9	b=ynfEnA%20Aw	ey-yenfaana.png
-buşram-beyne	önünde müjdeci	7:57 25:48 27:63	b=b$rA%20byn	busran beyne.png
-min âli fir'avne	Firavun ailesinden	2:49 7:141 14:6	b=Al%20frEwn%20ysw	min ali firavne.png
-mûsâ ve'îsâ	Mûsâ ve Îsâ	2:136 3:84	b=mwsY%20wEysY	musa ve isa.png
-illâ kânû bihî	alay etmesinler	15:11 36:30 43:7	b=AlA%20kAnwA%20bh	illa kanu bihi.png
-velev yuâhizullâhu	hemen cezalandırsaydı	16:61 35:45	b=*%20Allh%20AlnAs	yuahizullahu.png
-muhlikel-qurâ	beldelerin helâki	6:131 11:117 28:59	b=hlk%20AlqrY	muhlikel-qura.png
-veyuzekkiy	arındırır	2:129 2:151 3:164 62:2	b=wyzky	veyuzekkiy.png
-ma leke minallahi	Allah'tan sana ... yok	2:120 13:37	b=mA%20lk%20mn	ma leke minallahi.png
-`
 const NAMES = new Map()
 function line(str) {
   let [id, turk, refs, link, pict] = str.split('\t')
